unpackaged/main/default/objects/Invoice_Group__c/Invoice_Group__c.object-meta.xml
<CustomObject>
    <label>Invoice Group</label>
    <nameField>
        <label>Invoice Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>