unpackaged/main/default/objects/Invoice_Group__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>varcpq__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Groups</relationshipLabel>
    <relationshipName>Invoice_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>