unpackaged/main/default/objects/Invoice_Group__c/fields/Margin_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Margin_Sub_Total__c</fullName>
    <label>Margin Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>