unpackaged/main/default/objects/Invoice_Group__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>