unpackaged/main/default/objects/Invoice_Group__c/fields/SO_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>SO_Group_Id__c</fullName>
    <label>SO Group Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>